templates/resources/bedrock-egress-ibm-license-service-reporter-operator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ibm-license-service-reporter-operator
  namespace: $MY_LICENSE_SERVICE_REPORTER_NAMESPACE
  labels:
    component: cpfs3
spec:
  egress:
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
      to:
        - podSelector:
            matchLabels:
              apiserver: 'true'
          namespaceSelector: {}
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
      - port: 5353
        protocol: UDP
      - port: 5353
        protocol: TCP
      to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            dns.operator.openshift.io/daemonset-dns: default
  podSelector:
    matchLabels:
      name: "ibm-license-service-reporter-operator"
  policyTypes:
  - Egress
